Fixed barcket filter not showing active state

--- a/src/components/filter/filter-bracket-item.module.css
+++ b/src/components/filter/filter-bracket-item.module.css
@@ -14,7 +14,7 @@
     padding: 4px;
 }
 
-.bracket-img--selected {
+.bracket-img.bracket-img--selected {
     background-color: var(--ifm-color-secondary-lighter);
 }
 
