--- a/src/components/filter/filter-map-item.module.css
+++ b/src/components/filter/filter-map-item.module.css
@@ -14,7 +14,7 @@
     padding: 2px;
 }
 
-.map-img--selected {
+.map-img.map-img--selected {
     background-color: var(--ifm-color-secondary-lighter);
 }
 
